--- a/Version Control - 1/signup.html
+++ b/Version Control - 1/signup.html
@@ -23,7 +23,7 @@
       </div>
       <div class="row">
         <i class="fas fa-envelope"></i>
-        <input type="email" name="email" placeholder="Enter yout email" required />
+        <input type="email" name="email" placeholder="Enter your email" required />
       </div>
       <div class="row">
         <i class="fas fa-lock"></i>
